Fix home description letter spacing and font size

--- a/app/assets/stylesheets/redesign/layouts/home_hero.sass
+++ b/app/assets/stylesheets/redesign/layouts/home_hero.sass
@@ -37,10 +37,11 @@ $wrap-margin: 44px
 .HomeHero-description
   color: white
   @include font-family-mixin(Montserrat-Regular)
-  font-size: 14px
-  line-height: 18px
+  font-size: 16px
+  line-height: 20px
   max-width: 451px
-  margin-top: 7px
+  margin-top: 10px
+  letter-spacing: 1px
 
 .HomeHero-link
   display: flex
@@ -75,3 +76,7 @@ $wrap-margin: 44px
 
   .HomeHero
     margin-bottom: 35px
+
+  .HomeHero-description
+    line-height: 25px
+    margin-top: 15px
